完成邏輯，與test頁面

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,82 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>angularBase</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<head>
+  <meta charset="utf-8" />
+  <title>angularBase</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!--版面配置通用設定-->
+  <!-- <link rel="stylesheet" href="assets/css/master-pages-layout.css" />
+  <link rel="stylesheet" href="assets/css/index-layout-list.css" />
+  <link rel="stylesheet" href="assets/css/pages-title.css" /> -->
+  <!--頁首樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/master-header-layout.css" /> -->
+  <!--中間內容區-->
+  <!-- <link rel="stylesheet" href="assets/css/master-pages-container-layout.css" />
+  <link rel="stylesheet" href="assets/css/master-cont-layout.css" /> -->
+  <!--主選單樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/master-nav-menu-layout.css" /> -->
+  <!--使用者資訊-->
+  <!-- <link rel="stylesheet" href="assets/css/master-user-layout.css" /> -->
+  <!--頁尾樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/master-pages-footer-layout.css" /> -->
+  <!--文字大中小-->
+  <!-- <link rel="stylesheet" href="assets/css/fontChange.css" /> -->
+  <!--版面RWD選單-套件-->
+  <!-- <link rel="stylesheet" href="assets/css/drawer.css" /> -->
+  <!--版面RWD選單-控制項-->
+  <!-- <link rel="stylesheet" href="assets/css/drawer-layout.css" /> -->
+  <!--左選單//-->
+  <!-- <link rel="stylesheet" href="assets/css/left-menu-layout.css" /> -->
+  <!--標題樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/pages-title-layout.css" /> -->
+  <!--功能-->
+  <!--文字樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/cont-style-list.css" /> -->
+  <!--欄位樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/column-list.css" /> -->
+  <!--查詢樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/search-layout.css" /> -->
+  <!--輸入樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/input-style.css" /> -->
+  <!--按鈕樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/btn-list.css" /> -->
+  <!--點選樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/radio-list.css" /> -->
+  <!--勾選樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/checkbox-list.css" /> -->
+  <!--開關樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/onoffswitch-list.css" /> -->
+  <!--表格樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/table-list.css" /> -->
+  <!--分頁樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/page-pagination.css" /> -->
+  <!--最新消息-->
+  <!-- <link rel="stylesheet" href="assets/css/news-layout.css" /> -->
+  <!--卡片-功能樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/page-card.css" /> -->
+  <!--導頁樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/breadcrumb-list.css" /> -->
+  <!--圖標樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/icomoon.css" />
+  <link rel="stylesheet" href="assets/css/icon.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
+  <!--表格樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/table-list.css" />
+  <link rel="stylesheet" href="assets/css/sort-table-layout.css" />
+  <link rel="stylesheet" href="assets/css/breadcrumb-list.css" /> -->
+  <!--標題樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/pages-title-layout.css" />
+  <link rel="stylesheet" href="assets/css/master-cont-layout.css" /> -->
+  <!--查詢樣式-->
+  <!-- <link rel="stylesheet" href="assets/css/search-layout.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" /> -->
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
