完成部分scss外觀

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <title>angularBase</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- header -->
+
+
   <!--版面配置通用設定-->
   <!-- <link rel="stylesheet" href="assets/css/master-pages-layout.css" />
   <link rel="stylesheet" href="assets/css/index-layout-list.css" />
@@ -16,7 +19,7 @@
   <!-- <link rel="stylesheet" href="assets/css/master-pages-container-layout.css" />
   <link rel="stylesheet" href="assets/css/master-cont-layout.css" /> -->
   <!--主選單樣式-->
-  <!-- <link rel="stylesheet" href="assets/css/master-nav-menu-layout.css" /> -->
+  <!-- <link rel="stylesheet" href="assets/css/main-nav-menu-layout.css" /> -->
   <!--使用者資訊-->
   <!-- <link rel="stylesheet" href="assets/css/master-user-layout.css" /> -->
   <!--頁尾樣式-->
